# ppclip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
ppclip/: __init__.py  __main__.py  analyzer.py  audio.py  builder_jianying.py  builder_remotion.py  classifier.py  config.py  enrich.py  exporter.py  indexer.py  match.py  models.py  ocr.py  scenedetect.py  script.py  vision.py
ppclip/skills/jianying-editor/data/: cloud_sound_effects.csv  cloud_text_styles.csv  cloud_video_assets.csv  filters.csv  jy_cached_audio.csv  text_animations.csv  transitions.csv  tts_speakers.csv  video_intro_animations.csv  video_outro_animations.csv  video_scene_effects.csv
ppclip/skills/jianying-editor/scripts/: auto_exporter.py  cloud_manager.py  universal_tts.py
ppclip/skills/jianying-editor/scripts/core/: mocking_ops.py  project_base.py  text_ops.py  vfx_ops.py
ppclip/skills/jianying-editor/scripts/utils/: cli_protocol.py  config.py  env_setup.py  errors.py  formatters.py  logging_utils.py
