[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ppclip"
version = "0.1.0"
description = "素材 + 想法描述 → 剪映草稿"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0",
    "pyJianYingDraft",
    "pymediainfo",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.optional-dependencies]
scenedetect = ["scenedetect[opencv]>=0.6"]
tts = ["edge-tts>=6.0"]
classifier = ["open-clip-torch>=2.0"]
ocr = ["paddlepaddle", "paddleocr"]

[tool.setuptools.packages.find]
include = ["ppclip*"]
